# iot-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PortingGuide  PortingGuide.md  README.md  dependencies-test.cmake  dependencies.cmake
c-utility/: CMakeLists.txt  README.md  thirdpartynotice.txt
c-utility/adapters/: README.md  agenttime.c  agenttime_esp8266.c  condition_rtx_mbed.cpp  condition_win32.c  httpapi_compact.c  httpapi_curl.c  httpapi_wince.c  httpapi_winhttp.c  lock_pthreads.c  lock_win32.c  platform_linux.c  platform_stub.c  platform_tizenrt.c  platform_win32.c  socketio_berkeley.c  socketio_mbed.c  socketio_win32.c  threadapi_esp8266.c  threadapi_win32.c  tlsio_mbedtls.c  tlsio_ssl_esp8266.c  uniqueid_win32.c
c-utility/build_all/mbed/: azure_c_shared_utility_filelist.txt
c-utility/build_all/mbed3/: shared-util_filelist.txt
c-utility/build_all/tirtos/: package.bld
c-utility/build_all/windows/: build.cmd
c-utility/build_all/windowsce/: build.cmd
c-utility/configs/: azure_c_shared_utilityFunctions.cmake  azure_iot_build_rules.cmake
c-utility/devdoc/: agenttime_requirements.md  base64_requirements.md  buffer_requirements.md  connectionstringparser_requirements.md  constbuffer_requirements.md  constmap_requirements.md  dns_async.md  http_proxy_io_requirements.md  httpapi_compact_requirements.md  httpapiex_requirements.md  httpapiexsas_requirements.md  lock_requirements.md  map_requirements.md  optionhandler_requirements.md  platform_requirements.md  porting_guide.md  singlylinkedlist_requirements.md  template_requirements.md  threadapi_and_sleep_requirements.md  tickcounter_freertos_requirement.md  tlsio_requirements.md  uniqueid_requirements.md  uuid_requirements.md  uws_client_requirements.md  uws_frame_encoder_requirements.md  xio_requirements.md
c-utility/inc/azure_c_shared_utility/: const_defines.h  gballoc.h  refcount.h  shared_util_options.h  tlsio_mbedtls.h  uws_client.h
c-utility/jenkins/: debian_c.sh  linux_c_gcc44.sh  linux_wolfssl.sh  raspberrypi_c.sh  ubuntu1604_c.sh  ubuntu_clang.sh
c-utility/pal/: README.md  tlsio_options.c
c-utility/pal/freertos/: lock.c  threadapi.c  tickcounter.c
c-utility/pal/ios-osx/: platform_appleios.c  tlsio_appleios.c  tlsio_appleios.h
c-utility/pal/linux/: refcount_os.h
c-utility/pal/windows/: refcount_os.h
c-utility/samples/iot_c_utility/: CMakeLists.txt  iot_c_utility.c
c-utility/samples/socketio_connect/: CMakeLists.txt  main.c
c-utility/samples/tlsio_connect/: CMakeLists.txt  main.c
c-utility/src/: aziotsharedutil.def  base32.c  consolelogger.c  constmap.c  gballoc.c  map.c  singlylinkedlist.c  tlsio_cyclonessl.c  tlsio_cyclonessl_socket.c  tlsio_cyclonessl_socket_bsd.c  tlsio_openssl.c  tlsio_schannel.c  tlsio_wolfssl.c  uws_client.c  x509_openssl.c  x509_schannel.c  xlogging.c
c-utility/tests/: CMakeLists.txt
c-utility/tests/agenttime_ut/: CMakeLists.txt  agenttime_ut.c
c-utility/tests/base32_ut/: CMakeLists.txt  base32_ut.c
c-utility/tests/base64_ut/: CMakeLists.txt  base64_ut.c
c-utility/tests/buffer_ut/: CMakeLists.txt  buffer_ut.c
c-utility/tests/condition_ut/: CMakeLists.txt  condition_ut.c
c-utility/tests/connectionstringparser_ut/: CMakeLists.txt  connectionstringparser_ut.c
c-utility/tests/constbuffer_ut/: CMakeLists.txt  constbuffer_ut.c
c-utility/tests/constmap_ut/: CMakeLists.txt  constmap_ut.c
c-utility/tests/crtabstractions_ut/: CMakeLists.txt  crtabstractions_ut.c  main.c
c-utility/tests/dns_async_ut/: CMakeLists.txt  dns_async_ut.c  main.c
c-utility/tests/doublylinkedlist_ut/: CMakeLists.txt  doublylinkedlist_ut.c
c-utility/tests/gballoc_ut/: CMakeLists.txt  gballoc_ut.c
c-utility/tests/gballoc_without_init_ut/: CMakeLists.txt  gballoc_without_init_ut.c
c-utility/tests/hmacsha256_ut/: CMakeLists.txt  hmacsha256_ut.c
c-utility/tests/http_proxy_io_ut/: CMakeLists.txt  http_proxy_io_ut.c  main.c
c-utility/tests/httpapicompact_ut/: CMakeLists.txt  httpapicompact_ut.c  main.c
c-utility/tests/httpapiex_ut/: CMakeLists.txt  httpapiex_ut.c
c-utility/tests/httpapiexsas_ut/: CMakeLists.txt  httpapiexsas_ut.c
c-utility/tests/httpheaders_ut/: CMakeLists.txt  httpheaders_ut.c
c-utility/tests/lock_ut/: CMakeLists.txt  lock_ut.c  main.c
c-utility/tests/map_ut/: CMakeLists.txt  map_ut.c
c-utility/tests/optionhandler_ut/: CMakeLists.txt  main.c  optionhandler_ut.c
c-utility/tests/platform_win32_ut/: CMakeLists.txt  main.c  platform_win32_ut.c
c-utility/tests/real_test_files/: real_buffer.c  real_constbuffer.c  real_singlylinkedlist.c  real_string_tokenizer.h  real_strings.h
c-utility/tests/refcount_ut/: CMakeLists.txt  refcount_ut.c  some_refcount_impl.c
c-utility/tests/sastoken_ut/: CMakeLists.txt  sastoken_ut.c
c-utility/tests/singlylinkedlist_ut/: CMakeLists.txt  main.c  singlylinkedlist_ut.c
c-utility/tests/socket_async_ut/: CMakeLists.txt  keep_alive.h  main.c  socket_async_ut.c  test_defines.h
c-utility/tests/socketio_berkeley_ut/: CMakeLists.txt  socketio_berkeley_ut.c
c-utility/tests/socketio_win32_ut/: CMakeLists.txt  socketio_win32_ut.c
c-utility/testtools/: CMakeLists.txt
iotcore_client/: CMakeLists.txt
iotcore_client/inc/: iotcore_client_version.h  iotcore_mqtt_client.h  iotcore_param.h  iotcore_retry.h  iotcore_type.h
iotcore_client/samples/: CMakeLists.txt
iotcore_client/src/: _md5.c  _md5.h  iotcore_mqtt_client.c  iotcore_param_util.c  iotcore_param_util.h  iotcore_retry_logic.c  iotcore_retry_logic.h  iotcore_version.c
iothub_client/: CMakeLists.txt
iothub_client/inc/: bos.h  http_signer.h  iot_smarthome_callback.h  iot_smarthome_client.h  iotdm_callback.h  iotdm_client.h  iothub_client.h  iothub_client_persistence.h  iothub_client_persistence_sqlite.h  iothub_client_retry_control.h  iothub_client_version.h  iothub_mqtt_client.h  rsa_signer.h
iothub_client/samples/: CMakeLists.txt
iothub_client/src/: bos.c  http_signer.c  iot_smarthome_client.c  iotdm_client.c  iothub_client_persistence.c  iothub_client_persistence_sqlite.c  iothub_client_retry_control.c  iothub_mqtt_client.c  version.c
(+313 files in other folders)
